<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机电话本</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialTitle">拨号键盘</string>
    <string name="callLogTitle">通话记录</string>
    <string name="contactsTitle">联系人</string>
    <string name="msgTitle">短信</string>
    <string name="contactInfo">联系人信息</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="iconDidl">拨号Icon</string>
    <string name="iconCallLog">通话记录Icon</string>
    <string name="iconContacts">联系人Icon</string>
    <string name="iconMessage">短信Icon</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>
    <string name="title_activity_show_msg">ShowMsg</string>
    <string name="title_activity_call_log_detail">CallLogDetailActivity</string>
    <string name="title_activity_sent_msg">SentMsgActivity</string>
    <string name="title_activity_show_contact">联系人</string>
    <string name="title_activity_edit_contact">编辑联系人</string>
    <string name="contact_edit_menu_item">编辑</string>

</resources>
